--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#work" class="nav-link">Work</a></li>
                     <li><a href="ai-design.html" class="nav-link">AI + Design</a></li>
                     <li><a href="extra.html" class="nav-link">Extra</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
+                    
                 </ul>
             </div>
         </nav>
@@ -37,7 +37,7 @@
             <li role="none"><a role="menuitem" href="#work" class="mobile-menu-link">Work</a></li>
             <li role="none"><a role="menuitem" href="ai-design.html" class="mobile-menu-link">AI + Design</a></li>
             <li role="none"><a role="menuitem" href="extra.html" class="mobile-menu-link">Extra</a></li>
-            <li role="none"><a role="menuitem" href="about.html" class="mobile-menu-link">About</a></li>
+            
         </ul>
     </div>
 
@@ -104,7 +104,7 @@
                     </a>
                     <a class="project-card" href="transamerica-workplace-experience.html">
                         <div class="project-image" style="background: #FFFFFF; display: flex; align-items: flex-end; justify-content: center; height: 200px; border-radius: 10px; overflow: hidden;">
-                            <img src="assets/transamerica_wx_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
+                            <img src="assets/transamerica_wx_thumbnail.png" alt="Project thumbnail" style="width: 80%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
@@ -112,7 +112,7 @@
                     </a>
                     <a class="project-card" href="gm-dealer-sales-assistant-app.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 6</div>
+                            <img src="assets/gm_app_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Designing a Powerful Native Mobile & Tablet Sales Tool Application</h3>
@@ -142,6 +142,7 @@
                     <img src="assets/Email_circular.svg" alt="" aria-hidden="true" />
                 </a>
             </div>
+            <p class="text-body-sm">Made with love and lots of long days and learning ✌🏼<br></p>
             <p class="text-body-sm">&copy; 2025 TC Design. All rights reserved.</p>
         </div>
     </footer>
