Update navigation and carousel functionality
- Remove About link from desktop and mobile navigation across all pages
- Fix lock icon display with correct mask properties and currentColor
- Add auto-advance carousel functionality (3s intervals with smooth transitions)
- Update project navigation links

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -134,9 +134,6 @@
         .design-cta .btn-secondary { background: var(--color-white); color: var(--text-accent); border: 2px solid var(--text-accent); padding: var(--space-12) var(--space-20); border-radius: var(--radius-sm); text-decoration: none; display: inline-block; box-shadow: var(--shadow-sm); }
         .design-cta .btn-secondary:hover { background: var(--color-fire-50); text-decoration: none; }
         .design-cta .btn-secondary:active { background: var(--color-fire-50); }
-        /* Buttons with leading lock icon */
-        .btn-with-icon { display: inline-flex; align-items: center; gap: var(--space-8); }
-        .btn-with-icon .btn-icon { width: 16px; height: 16px; display: inline-block; background-color: var(--color-fire-500); -webkit-mask: url('assets/icon_lock-solid-full.svg') no-repeat center / contain; mask: url('assets/icon_lock-solid-full.svg') no-repeat center / contain; }
         /* Stack on tablet/mobile */
         @media (max-width: 1024px) { .design-cta { flex-direction: column; align-items: center; } }
         @media (max-width: 640px) { .design-cta .cta-button, .design-cta .btn-secondary { display: block; width: 100%; text-align: center; } }
@@ -480,9 +477,8 @@
                     </div>
                 </div>
                 <div class="design-cta">
-                    <a class="btn-secondary text-button btn-with-icon" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=1-4&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer"><span class="btn-icon" aria-hidden="true"></span><span>View mockups in Figma</span></a>
-                    <a class="btn-secondary text-button btn-with-icon" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=154-37698&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer"><span class="btn-icon" aria-hidden="true"></span><span>View journey map in Figma</span></a>
-                    
+                    <a class="btn-secondary text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=1-4&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View mockups in Figma</a>
+                    <a class="btn-secondary text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=154-37698&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View journey map in Figma</a>
                 </div>
             </div>
         </section>
@@ -500,7 +496,7 @@
       </section>
 
       <div class="design-cta">
-        <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=1-7&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">View finals designs in Figma</a>
+        <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=1-7&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View finals designs in Figma</a>
     </div>
 
          </section>
@@ -525,7 +521,7 @@
           </section>
 
           <div class="design-cta">
-            <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=49-68713&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">View concepts in Figma</a>
+            <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=49-68713&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View concepts in Figma</a>
         </div>
 
         <section id="designs" class="solution-images">
