--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -464,7 +464,7 @@
         </section>
 
         <div class="discovery-images design-cta">
-            <a class="cta-button text-button" href="https://www.figma.com/board/wELjLypyuvj2YHNDTLWBgd/Evolve--Owner-Account-Web---App-IA?node-id=0-1&t=q4lKVZO08UIlJXRg-1" target="_blank" rel="noopener noreferrer">View IA maps in Figma</a>
+            <a class="cta-button text-button" href="https://www.figma.com/board/wELjLypyuvj2YHNDTLWBgd/Evolve--Owner-Account-Web---App-IA?node-id=0-1&t=q4lKVZO08UIlJXRg-1" target="_blank" rel="noopener noreferrer">🔒 View IA maps in Figma</a>
         </div>
 
         <section class="case-metrics solution-section design-section">
