--- a/evolve-self-serve-cancellations.html
+++ b/evolve-self-serve-cancellations.html
@@ -408,7 +408,7 @@
                         <img src="assets/evolve_cancellation_wires v3.svg" alt="Wireframes V3" />
                     </div>
             </div>
-                <a class="design-cta cta-button" href="https://www.figma.com/design/zWbS3hKfzky8P9bfDodTab/Evolve--Self-serve-cancellations?node-id=40004013-120985&p=f&t=Wjck6HQkud16W6h7-11" target="_blank" rel="noopener noreferrer">View wires in Figma</a>
+                <a class="design-cta cta-button" href="https://www.figma.com/design/zWbS3hKfzky8P9bfDodTab/Evolve--Self-serve-cancellations?node-id=40004013-120985&p=f&t=Wjck6HQkud16W6h7-11" target="_blank" rel="noopener noreferrer">🔒 View wires in Figma</a>
             </div>
         </section>
 
@@ -457,7 +457,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="cta-button" href="https://www.figma.com/design/zWbS3hKfzky8P9bfDodTab/Evolve--Self-serve-cancellations?node-id=0-1&p=f&t=Wjck6HQkud16W6h7-11" target="_blank" rel="noopener noreferrer">View wires in Figma</a>
+                <a class="cta-button" href="https://www.figma.com/design/zWbS3hKfzky8P9bfDodTab/Evolve--Self-serve-cancellations?node-id=0-1&p=f&t=Wjck6HQkud16W6h7-11" target="_blank" rel="noopener noreferrer">🔒 View wires in Figma</a>
             </div>
         </section>
 
