--- a/gm-dealer-sales-assistant-app.html
+++ b/gm-dealer-sales-assistant-app.html
@@ -475,18 +475,18 @@
        
         <!-- Project navigation -->
         <nav class="project-nav" aria-label="Project navigation">
-            <div class="container">
-                <div class="nav-left">
-                    <div class="nav-prev">
-                        <span class="text-body-sm prev-project-label">← Previous</span>
-                        <a class="prev-project-link" href="transamerica-workplace-experience.html" aria-label="Previous project: Re-imagining a new responsive web experience for financial professionals">
-                            <span class="text-heading-5">Re-imagining a new responsive web experience for financial professionals</span>
-                        </a>
-                    </div>
+        <div class="container">
+            <div class="nav-left">
+                <div class="nav-prev">
+                    <span class="text-body-sm prev-project-label">← Previous</span>
+                    <a class="prev-project-link" href="gm-dealer-sales-assistant-app.html" aria-label="Previous project: Designing a Powerful Native Mobile & Tablet Sales Tool Application">
+                        <span class="text-heading-5">Designing a Powerful Native Mobile & Tablet Sales Tool Application</span>
+                    </a>
                 </div>
             </div>
-        </nav>
-    </main>
+        </div>
+    </nav>
+</main>
 
     <footer class="footer">
         <div class="container">
