--- a/ai-design.html
+++ b/ai-design.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <style>
+    <<style>
         /* Right-side hero media for AI + Design */
         .ai-hero-media .ai-media-stack { display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; max-width: 1050px; }
         .ai-hero-media .ai-media-stack img { max-width: 800px; width: 100%; height: auto; border-radius: 16px; box-shadow: var(--shadow-md); }
         .hero .hero-content h2 { padding-bottom: 16px; }
         /* Ensure the link inside hero-content matches text-body-sm size */
         .hero .hero-content .ai-note a { font-size: var(--text-sm); }
-    </style>
+    </style>>
 </head>
 <body>
     <header class="header">
